Fixed mail link on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -194,7 +194,7 @@ section#contact a, footer a {
 section#contact a:hover , footer a {
   color: rgba(0, 0, 0, 0.5);
 }
-section#contact a {
+section#contact a.mail {
     border-bottom: gray 5px dotted;
 }
 section#contact ul {
